// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExceptionMechanism additional data should render all fields in the data object 1`] = `
<div
  className="exception-mechanism"
>
  <Pills>
    <Pill
      key="mechanism"
      name="mechanism"
      value="generic"
    />
    <Pill
      key="data:relevant_address"
      name="relevant_address"
      value="0x1"
    />
  </Pills>
</div>
`;

exports[`ExceptionMechanism additional data should skip object-like values 1`] = `
<div
  className="exception-mechanism"
>
  <Pills>
    <Pill
      key="mechanism"
      name="mechanism"
      value="generic"
    />
  </Pills>
</div>
`;

exports[`ExceptionMechanism basic attributes should add the help_link to the description hovercard 1`] = `
<div
  className="exception-mechanism"
>
  <Pills>
    <Pill
      key="mechanism"
      name="mechanism"
      value="generic"
    >
      <Hovercard
        body="Nothing to see here."
        containerClassName="pill-icon"
        displayTimeout={100}
        header={
          <span>
            Details
             
            <a
              className="external-icon"
              href="https://example.org/help"
            >
              <em
                className="icon-open"
              />
            </a>
          </span>
        }
      >
        <InlineSvg
          size="14px"
          src="icon-circle-info"
        />
      </Hovercard>
    </Pill>
  </Pills>
</div>
`;

exports[`ExceptionMechanism basic attributes should render a description hovercard 1`] = `
<div
  className="exception-mechanism"
>
  <Pills>
    <Pill
      key="mechanism"
      name="mechanism"
      value="generic"
    >
      <Hovercard
        body="Nothing to see here."
        containerClassName="pill-icon"
        displayTimeout={100}
        header={
          <span>
            Details
             
          </span>
        }
      >
        <InlineSvg
          size="14px"
          src="icon-circle-info"
        />
      </Hovercard>
    </Pill>
  </Pills>
</div>
`;

exports[`ExceptionMechanism basic attributes should render a help_link icon 1`] = `
<div
  className="exception-mechanism"
>
  <Pills>
    <Pill
      key="mechanism"
      name="mechanism"
      value="generic"
    >
      <a
        className="external-icon"
        href="https://example.org/help"
      >
        <em
          className="icon-open"
        />
      </a>
    </Pill>
  </Pills>
</div>
`;

exports[`ExceptionMechanism basic attributes should render the exception mechanism 1`] = `
<div
  className="exception-mechanism"
>
  <Pills>
    <Pill
      key="mechanism"
      name="mechanism"
      value="generic"
    />
  </Pills>
</div>
`;

exports[`ExceptionMechanism basic attributes should render the handled pill 1`] = `
<div
  className="exception-mechanism"
>
  <Pills>
    <Pill
      key="mechanism"
      name="mechanism"
      value="generic"
    />
    <Pill
      key="handled"
      name="handled"
      value={false}
    />
  </Pills>
</div>
`;

exports[`ExceptionMechanism errno meta should prefer the errno name if present 1`] = `
<div
  className="exception-mechanism"
>
  <Pills>
    <Pill
      key="mechanism"
      name="mechanism"
      value="generic"
    />
    <Pill
      key="errno"
      name="errno"
      value="E2BIG"
    />
  </Pills>
</div>
`;

exports[`ExceptionMechanism errno meta should render the errno number 1`] = `
<div
  className="exception-mechanism"
>
  <Pills>
    <Pill
      key="mechanism"
      name="mechanism"
      value="generic"
    />
    <Pill
      key="errno"
      name="errno"
      value={7}
    />
  </Pills>
</div>
`;

exports[`ExceptionMechanism mach_exception meta should prefer the exception name if present 1`] = `
<div
  className="exception-mechanism"
>
  <Pills>
    <Pill
      key="mechanism"
      name="mechanism"
      value="generic"
    />
    <Pill
      key="mach"
      name="mach exception"
      value="EXC_BAD_ACCESS"
    />
  </Pills>
</div>
`;

exports[`ExceptionMechanism mach_exception meta should render the mach exception number 1`] = `
<div
  className="exception-mechanism"
>
  <Pills>
    <Pill
      key="mechanism"
      name="mechanism"
      value="generic"
    />
    <Pill
      key="mach"
      name="mach exception"
      value={1}
    />
  </Pills>
</div>
`;

exports[`ExceptionMechanism signal meta should add the signal code if present 1`] = `
<div
  className="exception-mechanism"
>
  <Pills>
    <Pill
      key="mechanism"
      name="mechanism"
      value="generic"
    />
    <Pill
      key="signal"
      name="signal"
      value="11 (code 0)"
    />
  </Pills>
</div>
`;

exports[`ExceptionMechanism signal meta should prefer signal and code names if present 1`] = `
<div
  className="exception-mechanism"
>
  <Pills>
    <Pill
      key="mechanism"
      name="mechanism"
      value="generic"
    />
    <Pill
      key="signal"
      name="signal"
      value="SIGSEGV (SEGV_NOOP)"
    />
  </Pills>
</div>
`;

exports[`ExceptionMechanism signal meta should render the signal number 1`] = `
<div
  className="exception-mechanism"
>
  <Pills>
    <Pill
      key="mechanism"
      name="mechanism"
      value="generic"
    />
    <Pill
      key="signal"
      name="signal"
      value={11}
    />
  </Pills>
</div>
`;
